--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
@@ -1,15 +1,33 @@
-<mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align recoveryPlan" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
-
     <form [formGroup]="recoveryPlanForm">
+      
+      <button
+          #tooltip="matTooltip" [hidden]="hideHelp"
+      (mouseenter)="$event.stopImmediatePropagation()"
+      (click)="tooltip.show()"
+      class="help-button"
+      matTooltipClass="tooltip-custom"
+      [matTooltip]="message || ''">
+      <span class="ques">?</span>&nbsp; HELP
+    </button>
+      <!--<mat-form-field class="example-user-input">
+        <mat-label>Tooltip message</mat-label>
+        <input style="display:none" value="test test test value" matInput [formControl]="message">
+      </mat-form-field>-->
+      <!--<button (click)="tooltip.toggle()" mat-raised-button #tooltip="matTooltip"
+        matTooltip="Info about the action"
+        matTooltipPosition="right"
+        aria-tooltip="Button that displays and hides a tooltip triggered by other buttons">
+        Action
+      </button>-->
       <div class="col-12 content-container infoText" >
         <div class="row">
           <div class="infoIconCol">
             <div class="material-icons infoIconStyle">info</div>
           </div>
           <div class="col-md-11">
-            <span class="page-subheadbold">Please review and complete the form below. As this account is linked to your BC Services Card, certain fields are not editable.</span><br />
-                Required fields are marked with a red asterisk *
+            Please review and complete the form below. Required fields are marked with a red asterisk<span style="color:red" >*</span>
           </div>
           <div class="col-md-6"></div>
       
@@ -20,54 +38,75 @@
       <ng-container>
         <div class="row">
           <div class="col-md-3">
-            <p class="sub-heading" style="font-size: 15px">
+            <p  style="font-size: 15px">
               Project Number<span style="color:red" >*</span>
             </p>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="mat-form-round">
               <input
+                id="projectNumber"
+                     (focusin)="setHelpText(1, tooltip)"
                 formControlName="projectNumber"
                 matInput
                 required
                 placeholder="Project Number"
                 maxlength="100"/>
+              <mat-error
+                  *ngIf="
+                  recoveryPlanForm.get('projectNumber').hasError('isRequired')
+                "
+                >
+                  Project Name or Project Number is required to upload documents</mat-error
+                >
             </mat-form-field>
           </div>
           <div class="col-md-1"></div>
           <div class="col-md-8">
-            <p class="sub-heading" style="font-size: 15px">
+            <p  style="font-size: 15px">
               Project Name<span style="color:red" >*</span>
             </p>
             <mat-form-field appearance="outline">
               <input
+                     (focusin)="setHelpText(2, tooltip)"
+                     #projectName
                 formControlName="projectName"
                 matInput
                 required
                 placeholder="Project Name"
                 maxlength="100"/>
+              <mat-error
+                *ngIf="
+                recoveryPlanForm.get('projectName').hasError('isRequired')
+              "
+              >
+                Project Name or Project Number is required to upload documents</mat-error
+              >
             </mat-form-field>
           </div>
         </div>
         <div class="row">
-          <p class="sub-heading" style="font-size: 15px">
+          <p  style="font-size: 15px">
             Are the dates of damage the same dates provided on the application?<span style="color:red" >*</span>
           </p>
           <mat-radio-group
+            (focusin)="setHelpText(3, tooltip)" 
             formControlName="isdamagedDateSameAsApplication"
             class="primary-radio-group horizontal-radio-group"
             required
+            (change)="selectDamageDates($event)"
             aria-label="Select an option">
             <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
           </mat-radio-group><br/><br/><br/>
         </div>
 
         <div class="row" *ngIf="showDates == true">
-          <p class="sub-heading" style="font-size: 15px">
-            What is this site location's date(s) of damage?:<span style="color:red" >*</span>
+          <p  style="font-size: 15px; margin-bottom: 10px !important">
+            What is the date(s) of damage for this site?<span style="color:red" >*</span>
           </p>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <mat-form-field appearance="outline" >
               <mat-label>From date</mat-label>
               <input matInput
+                (focusin)="setHelpText(4, tooltip)"
                 [matDatepicker]="fromPicker"
                 [readonly]="isReadOnly === true"
                 formControlName="sitelocationdamageFromDate"
@@ -96,10 +135,11 @@
             >
             </mat-form-field>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <mat-form-field appearance="outline">
               <mat-label>To date</mat-label>
               <input matInput
+                (focusin)="setHelpText(5, tooltip)"
                 [matDatepicker]="toPicker"
                 formControlName="sitelocationdamageToDate"
                 [readonly]="isReadOnly === true"
@@ -140,12 +180,13 @@
         </div>
 
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
-            Why is this site location's date(s) of damage different from dates provided on the application?<span style="color:red" >*</span>
+          <p  style="font-size: 15px">
+            Why is the date(s) of damage for this site different from the dates provided on the application?<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(6, tooltip)"
                 formControlName="differentDamageDatesReason"
                 placeholder="Why is this site location's date(s) of damage different from dates provided on the application?"
                 [rows]="5"
@@ -159,11 +200,12 @@
 
         <div class="row">
           <div class="col-md-4">
-            <p class="sub-heading" style="font-size: 15px">
+            <p  style="font-size: 15px">
               Site Location<span style="color:red" >*</span>
             </p>
             <mat-form-field appearance="outline">
               <input
+                (focusin)="setHelpText(7, tooltip)"
                 formControlName="siteLocation"
                 required
                 matInput
@@ -174,18 +216,19 @@
         </div>
         <br />
         <div>
-          <p class="sub-heading" style="font-size: 18px; font-weight: bold;">
+          <p  style="font-size: 18px; font-weight: bold;">
             Damage Description
           </p>
         </div>
 
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
+          <p  style="font-size: 15px">
             What infrastructure was damaged?<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(8, tooltip)"
                 formControlName="infraDamageDetails"
                 placeholder="What infrastructure was damaged?"
                 [rows]="5"
@@ -196,12 +239,13 @@
           </div>
         </div>
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
+          <p  style="font-size: 15px">
             What caused the damage?<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(9, tooltip)"
                 formControlName="causeofDamageDetails"
                 placeholder="What caused the damage?"
                 [rows]="5"
@@ -213,12 +257,13 @@
         </div>
         <br />
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
+          <p  style="font-size: 15px">
             Describe the damage<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(10, tooltip)"
                 formControlName="describeDamageDetails"
                 placeholder="Describe the damage"
                 [rows]="5"
@@ -230,14 +275,15 @@
         </div>
 
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
-            Describe the materials, including quantities and measurements, of the damaged infrastructure<span style="color:red" >*</span>
+          <p  style="font-size: 15px">
+            Describe what was damaged (materials, including quantities and measurements) of damaged infrastructure<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(11, tooltip)"
                 formControlName="describeDamagedInfrastructure"
-                placeholder="Describe the materials, including quantities and measurements, of the damaged infrastructure"
+                placeholder="Describe what was damaged (materials, including quantities and measurements) of damaged infrastructure"
                 [rows]="5"
                 required
                 style="resize:none"
@@ -247,20 +293,21 @@
         </div>
         <br />
         <div>
-          <p class="sub-heading" style="font-size: 18px; font-weight: bold;">
+          <p  style="font-size: 18px; font-weight: bold;">
             Repair Work Description
           </p>
         </div>
 
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
-            Describe the repair work<span style="color:red" >*</span>
+          <p  style="font-size: 15px">
+            Describe the repair work required to restore to pre-event condition<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(12, tooltip)"
                 formControlName="repairWorkDetails"
-                placeholder="Describe the repair work"
+                placeholder="Describe the repair work required to restore to pre-event condition"
                 [rows]="5"
                 required
                 style="resize:none"
@@ -269,20 +316,88 @@
           </div>
         </div>
         <div class="row" >
-          <p class="sub-heading" style="font-size: 15px">
-            Describe the materials, including quantities and measurements, to repair damaged infrastructure<span style="color:red" >*</span>
+          <p  style="font-size: 15px">
+            Describe the materials, including quantities and measurements, to repair to pre-event condition<span style="color:red" >*</span>
           </p>
           <div class="col-md-12">
             <mat-form-field appearance="outline">
               <textarea [disabled]="isReadOnly" matInput
+                (focusin)="setHelpText(13, tooltip)"
                 formControlName="repairDamagedInfrastructure"
-                placeholder="Describe the materials, including quantities and measurements, to repair damaged infrastructure"
+                placeholder="Describe the materials, including quantities and measurements, to repair to pre-event condition"
                 [rows]="5"
                 style="resize:none"
                 required
                 maxlength="200"></textarea>
             </mat-form-field><br/>
           </div>
+        </div>
+
+        <div>
+          <p  style="font-size: 18px; font-weight: bold;">
+            Estimations
+          </p>
+        </div>
+
+        <div class="row">
+          
+          <div class="col-md-4">
+            <p  style="font-size: 15px; margin-bottom: 10px !important">
+              Estimated completion date (month/year)
+            </p>
+            <mat-form-field appearance="outline" >
+              <mat-label>Estimated completion date</mat-label>
+              <input matInput
+                (focusin)="setHelpText(14, tooltip)"
+                [matDatepicker]="completionPicker"
+                [readonly]="isReadOnly === true"
+                formControlName="estimatedCompletionDate"
+                required >
+              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle matSuffix [for]="completionPicker" [disabled]="isReadOnly === true"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #completionPicker startView="multi-year" [disabled]="isReadOnly === true"
+              ></mat-datepicker>
+              <mat-error
+                *ngIf="
+                recoveryPlanForm.get('estimatedCompletionDate').invalid &&
+                recoveryPlanForm.get('estimatedCompletionDate').hasError('required')
+              "
+              >
+                Estimated completion date is required</mat-error
+              >
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 costCurrency">
+            <p  style="font-size: 15px; margin-bottom: 10px !important">
+              Estimate or actual cost of total project (include taxes)<span style="color:red" >*</span>
+            </p>
+            <mat-form-field appearance="outline" class="mat-form-round">
+              <!--<input
+                id="currencyBox"
+                formControlName="estimateCostIncludingTax"
+                matInput
+                required
+                placeholder="Estimate or actual cost"
+                maxlength="100"/>
+              <span class="currencyText">CA</span>-->
+              <div class="searchDiv">
+                <input
+                  (focusin)="setHelpText(15, tooltip)"
+                  #currencyBox
+                  id="currencyBox"
+                  formControlName="estimateCostIncludingTax"
+                  matInput
+                       required
+                  placeholder="Estimate or actual cost"
+                       (keypress)="numericOnly($event)"
+                  maxlength="100"/>
+                <span class="currencyText">CA$</span>
+              </div>
+              
+            </mat-form-field>
+          </div>
+          
         </div>
       </ng-container>
       
