--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.scss
@@ -2,6 +2,72 @@ mat-form-field {
     width: 100%;
 }
 
+.recoveryPlan p {
+  margin: 0 0 5px !important;
+}
+
+/*::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
+  color: green;
+}
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+  color: yellow;
+}
+*/
+/*::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+  border-radius: 21px !important;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+  border-radius: 30px !important;*/
+  /*border: none !important;*/
+/*}*/
+
+::ng-deep .mat-form-field {
+  .mat-form-field-outline {
+    &-end {
+      border-radius: 0 5px 5px 0 !important;
+    }
+
+    &-start {
+      border-radius: 5px 0 0 5px !important;
+    }
+  }
+}
+
+
+.boxborder {
+  border: 1px solid #707070;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+#searchBox {
+  width: 100%;
+  padding-right: 30px;
+}
+
+.searchDiv {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.currencyText {
+    position: relative;
+    left: -50px;
+    padding-left: 20px;
+    border-left: 1px solid black;
+}
+/*
+::ng-deep .costCurrency .mat-form-field-infix {
+  border-right: 50px solid transparent;
+}*/
+
+::ng-deep .mat-form-field-infix {
+  border-top: 6px solid transparent;
+}
+
 .primary-radio-group {
     display: flex;
     flex-direction: column;
@@ -114,7 +180,7 @@ table {
   background: #F6F9FC 0% 0% no-repeat padding-box;
   border: 1px solid #003366;
   border-radius: 10px;
-  padding: 10px;
+  padding: 12px;
   margin-top: 10px;
 }
 
@@ -134,6 +200,17 @@ table {
     display: inline-block;
     font-weight: bold;
   }
+
+  .help-button {
+    top: 200px;
+  }
+}
+
+@media (max-width: 750px) {
+
+  .help-button {
+    top: 200px !important;
+  }
 }
 
 .services-info {
@@ -143,4 +220,56 @@ table {
   padding: 15px;
 }
 
+.help-button {
+  position: fixed;
+  animation-name: show;
+  animation-duration: 1s;
+  top: 140px;
+  right: 0px;
+  width: 85px;
+  padding: 3px 5px 8px 5px;
+  border: 1px solid #ccc;
+  background: #FCBA19 0% 0% no-repeat padding-box;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0px 3px 6px #00000029;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  z-index: 1;
+}
 
+.help-button .ques{
+    font-size: 20px
+}
+
+::ng-deep .tooltip-custom {
+  font-size: 13px !important;
+  margin-right: 0px !important;
+  color: #313132 !important;
+  background-color: #F6F9FC;
+}
+/**/
+
+::ng-deep .mat-tooltip {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  right: 0px;
+  max-width: 300px !important;
+  padding: 12px !important;
+  box-shadow: 0px 3px 6px #00000029;
+  animation: tooltipFadeIn 0.15s;
+  display: block;
+  white-space: pre-wrap;
+}
+
+::ng-deep .mat-tooltip-show {
+  animation: mat-tooltip-show 1000ms cubic-bezier(0, 0, 0.2, 1) forwards !important;
+}
+
+::ng-deep .mat-tooltip-hide {
+  animation: mat-tooltip-hide 1000ms cubic-bezier(0, 0, 0.2, 1) forwards !important;
+}
