--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <form [formGroup]="recoveryPlanForm">
       
-      <button
+      <button type="button"
           #tooltip="matTooltip" [hidden]="hideHelp"
       (mouseenter)="$event.stopImmediatePropagation()"
       (click)="tooltip.show()"
