--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.html
@@ -146,6 +146,7 @@
         [parentPageName]="parentPageName"
         [currentFlow]="currentFlow"
         [allowEdit]="true"
+        (stepToNavigate)="navigateToStep($event)"
       >
       </app-review-project>
       <br />
