--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
@@ -61,7 +61,8 @@
               <label class="sub-heading" style="font-size: 15px" [hidden]="!fileUpload.get('fileName').value" *ngIf="!fileType">Category: please select a category that describes the file you are attaching to your application.</label>
               <mat-form-field appearance="outline" [hidden]="!fileUpload.get('fileName').value" *ngIf="!fileType">
                 <mat-label>File category</mat-label>
-                <mat-select formControlName="fileType" matInput placeholder="File category" required>
+                <input type="hidden" formControlName="fileTypeText" />
+                <mat-select (selectionChange)="setFileTypeText($event)" formControlName="fileType" matInput placeholder="File category" required>
                   <div *ngFor="let option of FileCategories | keyvalue: originalOrder">
                     <mat-option *ngIf="excludeFileTypes.indexOf(option.value) <0"
                       [value]="option.key">
