Revert "EMBCDFA-1142: Update CSS to align radio buttons"

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
@@ -9,9 +9,7 @@ mat-form-field {
 }
 
 .primary-radio-button {
-    margin-top: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
 }
 
 .highlight {
@@ -25,8 +23,7 @@ mat-form-field {
 }
 
 .horizontal-radio-group {
-  display: flex; 
-  flex-direction: row;
+  display: flex; flex-direction: row;
   margin: 15px 0;
 }
 
