Revert "EMBCDFA-1099: Updates to Dates of Damage labels"

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -73,13 +73,10 @@
 
         <div class="row">
           <p class="sub-heading" style="font-size: 15px">
-            Dates of Damage<span style="color:red" >*</span>
-          </p>
-          <p>
-            If the damage was caused all in one day, enter the same date in both the From date and the To date boxes.
+            Date(s) of damage?<span style="color:red" >*</span>
           </p>
           <div class="col-md-4">
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" >
               <mat-label>From date</mat-label>
               <input matInput
                 [matDatepicker]="fromPicker"
