--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -68,7 +68,10 @@
 
         <div class="row">
           <p class="sub-heading" style="font-size: 15px">
-            Date(s) of damage?<span style="color:red" >*</span>
+            Dates of Damage<span style="color: red">*</span>
+          </p>
+          <p>
+            If the damage was caused all in one day, enter the same date in both the From date and the To date boxes.
           </p>
           <div class="col-md-4">
             <mat-form-field appearance="outline" >
